--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ before_script:
   - composer require satooshi/php-coveralls dev-master --ignore-platform-reqs
 
 script:
-  - # Currently no tests: phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
+  # Currently no tests: phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
-  - # Currently no tests: php vendor/bin/coveralls -v
+  # Currently no tests: php vendor/bin/coveralls -v
 
 cache:
   directories:
