--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -33,7 +33,5 @@ return PhpCsFixer\Config::create()
     ])
     ->setFinder(
         PhpCsFixer\Finder::create()
-            ->in(__DIR__ . "/examples")
-            ->in(__DIR__ . "/lib")
-            ->in(__DIR__ . "/test")
+            ->in(__DIR__ . "/src")
     );
