--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ language: php
 php:
   - 7.0
   - 7.1
+  - 7.2
+  - 7.3
+  - 7.4snapshot
   - nightly
 
 matrix:
@@ -27,3 +30,4 @@ after_script:
 cache:
   directories:
     - $HOME/.composer/cache/files
+    - $HOME/.php-cs-fixer
