Drop PHP 7.0 from Travis CI

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     },
     "require": {
+        "php": ">=7.1",
         "ext-json": "*",
         "amphp/http-client": "^4-rc"
     },
