--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,18 @@
             "Kelunik\\OAuth\\": "src"
         }
     },
-    "require": {
-        "php": ">=7.2",
-        "ext-json": "*",
-        "amphp/http-client": "^4.3"
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require": {
+        "php": ">=8.1",
+        "amphp/http-client": "^5"
     },
     "require-dev": {
         "ext-pcntl": "*",
-        "friendsofphp/php-cs-fixer": "^2.3",
-        "amphp/php-cs-fixer-config": "dev-master",
-        "amphp/http-server": "^2-rc",
-        "amphp/http-server-session": "^2-rc",
-        "amphp/http-server-router": "^1.0",
-        "amphp/log": "^1.1"
+        "amphp/php-cs-fixer-config": "^2",
+        "amphp/http-server": "^3",
+        "amphp/http-server-session": "^3",
+        "amphp/http-server-router": "^2",
+        "amphp/log": "^2"
     }
 }
